--- a/views/partials/_logout.ejs
+++ b/views/partials/_logout.ejs
@@ -7,9 +7,9 @@
       <a class="text-3xl font-bold cursor-pointer" href="/">LOGO</a>
       <!-- login -->
       <div class="login">
-        <a class="inline-block ml-auto mr-3 py-2 px-6 bg-gray-200 hover:bg-blue-300 text-lg text-gray font-bold rounded-xl transition duration-200 ease-in-out" href="/favs">My Favs</a>
-        <a class="inline-block ml-auto mr-3 py-2 px-6 bg-gray-200 hover:bg-blue-300 text-lg text-gray font-bold rounded-xl transition duration-200 ease-in-out" href="/cart">My Cart</a>
-        <form action="/logout" method="POST" class="inline-block py-2 px-6 bg-blue-300 hover:bg-blue-500 text-lg text-white font-bold rounded-xl  transition duration-200 ease-in-out">
+        <a class="inline-block ml-auto mr-3 py-2 px-6 bg-gray-200 hover:bg-blue-300 hover:text-white text-lg text-gray font-bold rounded-xl transition duration-200 ease-in-out" href="/favs">My Favs</a>
+        <a class="inline-block ml-auto mr-3 py-2 px-6 bg-gray-200 hover:bg-blue-300 hover:text-white text-lg text-gray font-bold rounded-xl transition duration-200 ease-in-out" href="/cart">My Cart</a>
+        <form action="/logout" method="POST" class="inline-block py-2 px-6 bg-red-300 hover:bg-red-500 text-lg text-white font-bold rounded-xl  transition duration-200 ease-in-out">
           <button type="submit" >Log out</button>
         </form>
       </div>
