--- a/views/index.ejs
+++ b/views/index.ejs
@@ -125,7 +125,7 @@
           <option>All Fruit</option>
           <option>My Fruit</option>
         </select> -->
-
+        <!-- <%= user[0].isadmin == undefined %> -->
         <% if (user[0].isadmin) { %>
           <a href="/sell">
             <button class="sellFruit">Sell Fruit</button>
@@ -233,9 +233,9 @@
                   </div>
                   <div
                     class="modal-footer flex flex-shrink-0 flex-wrap items-center justify-end p-4 border-t border-gray-200 rounded-b-md">
+                    <a href="/contact">
                     <button type="button"
-                      class="inline-block tracking-wider px-6 py-2.5 bg-fruitYellow text-fruitBrown font-extrabold text-sm leading-tight uppercase rounded shadow-md hover:bg-fruitPink hover:text-white hover:shadow-lg focus:bg-fruitPink focus:shadow-lg focus:outline-none focus:ring-0 active:bg-fruitPink active:shadow-lg transition duration-150 ease-in-out"
-                      data-bs-dismiss="modal">
+                      class="inline-block tracking-wider px-6 py-2.5 bg-fruitYellow text-fruitBrown font-extrabold text-sm leading-tight uppercase rounded shadow-md hover:bg-fruitPink hover:text-white hover:shadow-lg focus:bg-fruitPink focus:shadow-lg focus:outline-none focus:ring-0 active:bg-fruitPink active:shadow-lg transition duration-150 ease-in-out">
                       EMAIL SELLER
                     </button>
                     </a>
