--- a/views/index.ejs
+++ b/views/index.ejs
@@ -16,7 +16,7 @@
 <script src="/vendor/jquery-3.0.0.js"></script>
 <script src="/scripts/favourites.js"></script>
 <script src="/scripts/app.js"></script>
-<script src="/scripts/fruit-info.js" defer></script>
+<script src="/scripts/mark-sold.js" defer></script>
 
 <!-- tailwind elements plugin -->
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" />
@@ -250,10 +250,17 @@
                       SOLD
                     </button>
                     <% } else { %>
-                    <button type="button"
-                      class="cart_btn inline-block tracking-wider px-6 py-2.5 bg-fruitYellow text-fruitBrown font-extrabold text-sm leading-tight uppercase rounded shadow-md hover:bg-fruitPink hover:text-white hover:shadow-lg focus:bg-fruitPink focus:shadow-lg focus:outline-none focus:ring-0 active:bg-fruitPinkactive:shadow-lg transition duration-150 ease-in-out ml-1" data-fruitId="<%= fruit.id %>">
+                      <% if (user[0].isadmin) { %>
+                        <button id="modalAddToCart" type="button"
+                        class="cart_btn inline-block tracking-wider px-6 py-2.5 bg-fruitYellow text-fruitBrown font-extrabold text-sm leading-tight uppercase rounded shadow-md hover:bg-fruitPink hover:text-white hover:shadow-lg focus:bg-fruitPink focus:shadow-lg focus:outline-none focus:ring-0 active:bg-fruitPink active:shadow-lg transition duration-150 ease-in-out ml-1" data-fruitId="<%= fruit.id %>" onclick="updateFruitSold(<%= fruit.id %>)">
+                        MARK SOLD
+                      </button>
+                      <% } else { %>
+                    <button id="modalAddToCart" type="button"
+                      class="cart_btn inline-block tracking-wider px-6 py-2.5 bg-fruitYellow text-fruitBrown font-extrabold text-sm leading-tight uppercase rounded shadow-md hover:bg-fruitPink hover:text-white hover:shadow-lg focus:bg-fruitPink focus:shadow-lg focus:outline-none focus:ring-0 active:bg-fruitPink active:shadow-lg transition duration-150 ease-in-out ml-1" data-fruitId="<%= fruit.id %>">
                       ADD TO CART
                     </button>
+                      <% } %>
                     <% } %>
                   </div>
                 </div>
