--- a/views/index.ejs
+++ b/views/index.ejs
@@ -244,7 +244,7 @@
                     <% } else { %>
 
                       <% if (user[0].isadmin) { %>
-                        <button id="modalAddToCart" type="button"
+                        <button id="modalMarkSold" type="button"
                         class="cart_btn cart_plus inline-block tracking-wider px-6 py-2.5 bg-fruitYellow text-fruitBrown font-extrabold text-sm leading-tight uppercase rounded shadow-md hover:bg-fruitPink hover:text-white hover:shadow-lg focus:bg-fruitPink focus:shadow-lg focus:outline-none focus:ring-0 active:bg-fruitPink active:shadow-lg transition duration-150 ease-in-out ml-1" data-id="plus" data-fruitId="<%= fruit.id %>" onclick="updateFruitSold(<%= fruit.id %>)">
                         MARK SOLD
                       </button>
