--- a/views/index.ejs
+++ b/views/index.ejs
@@ -143,32 +143,31 @@
 
           <div class="product cursor-pointer relative overflow-hidden bg-no-repeat bg-cover max-w-xs" >
             <% if (!user[0].isadmin) { %>
-              <div class="click-to-pop " id="moreInfoBtn" data-bs-toggle="modal" data-bs-target="#exampleModalCenter<%= fruit.id %>">
+            <div class="click-to-pop " id="moreInfoBtn" data-bs-toggle="modal" data-bs-target="#exampleModalCenter<%= fruit.id %>">
             <% } else { %>
               <div class="click-to-pop " id="moreInfoBtn" data-bs-toggle="modal" data-bs-target="#exampleModalCenter<%= fruit.id %>">
             <% } %>
               <div class="productImage rounded-t-2xl mb-1  max-w-xs hover:scale-105 transition duration-300 ease-in-out">
                 <% if (fruit.issold) { %>
                   <img id="fruitImage" class="grayscale h-48 w-full object-cover" src="<%= fruit.fruit_picture_url %>" alt="fruits" >
-                <% } else { %>
-                  <img id="fruitImage" class="h-48 w-full object-cover" src="<%= fruit.fruit_picture_url %>" alt="fruits" >
-                <% } %>
-              </div>
+                  <% } else { %>
+                <img id="fruitImage" class="h-48 w-full object-cover" src="<%= fruit.fruit_picture_url %>" alt="fruits" >
+                  <% } %>
+                </div>
+                
+                <div class="flex justify-between mt-3 mb-2">
+                  <strong class="text-fruitBrown productName text-lg flex px-5"><%= fruit.name %></strong>
+                  <strong class="text-fruitBrown productName text-lg flex px-5">$<%= fruit.price %></strong>
+                  <!--heart-->
+                  <!-- <i class="fa-solid fa-circle-info" id="moreInfoBtn" data-bs-toggle="modal" data-bs-target="#exampleModalCenter"></i> -->
+                  <% if (fruit.isfavourite) { %>
+                    <i class="fa-solid fa-heart-circle-minus fav_btn" data-id="minus" data-fruitId="<%= fruit.id %>"></i>
+                  <% } else { %>
+                    <i class="fa-solid fa-heart-circle-plus fav_btn" data-id="plus" data-fruitId="<%= fruit.id %>"></i>
+                  <% } %>
+                  <!--heart end-->
             </div>
-              <!--heart-->
-              <!-- <i class="fa-solid fa-circle-info" id="moreInfoBtn" data-bs-toggle="modal" data-bs-target="#exampleModalCenter"></i> -->
-              <!--heart end-->
-
-              <div class="flex justify-between mt-3 mb-2">
-                <strong class="text-fruitBrown productName text-lg flex px-5"><%= fruit.name %></strong>
-                <strong class="text-fruitBrown productName text-lg flex px-5">$<%= fruit.price %></strong>
-                <% if (fruit.isfavourite) { %>
-                  <i class="fa-solid fa-heart-circle-minus fav_btn flex px-5" data-id="minus" data-fruitId="<%= fruit.id %>"></i>
-                <% } else { %>
-                  <i class="fa-solid fa-heart-circle-plus fav_btn flex px-5" data-id="plus" data-fruitId="<%= fruit.id %>"></i>
-                <% } %>
-
-              </div>
+            </div>
 
             <% if (user[0].isadmin) { %>
               <% if (fruit.issold) { %>
