--- a/views/sell.ejs
+++ b/views/sell.ejs
@@ -33,12 +33,14 @@
 
 </head>
   <body>
-  <%- include('partials/_header') %>
 
-  <section class="h-screen">
+  <%- include('partials/_header_alt') %>
+
+
+  <section class="h-screen container mx-auto">
   <div class="px-6 h-full text-gray-800">
     <div
-      class="flex xl:justify-center lg:justify-between justify-center items-center flex-wrap h-full g-6"
+      class="flex xl:justify-between lg:justify-between justify-center items-center flex-wrap h-full g-6"
     >
 
       <div class="xl:ml-20 xl:w-5/12 lg:w-5/12 md:w-8/12 mb-12 md:mb-0">
@@ -48,11 +50,11 @@
           <div
             class="flex items-center my-4 before:flex-1 before:border-t before:border-gray-300 before:mt-0.5 after:flex-1 after:border-t after:border-gray-300 after:mt-0.5"
           >
-            <p class="text-center font-semibold mx-4 mb-0">NEW FRUIT</p>
+            <p class="text-center text-lg font-bold mx-4 mb-0">NEW FRUIT</p>
           </div>
 
         <div class="flex flex-wrap -mx-3 mb-6">
-          <div class="w-full  px-3 mb-6 md:mb-0">
+          <div class="w-full  px-3  md:mb-0">
             <label class="block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2" for="fruit-name">
               Fruit Name
             </label>
@@ -88,8 +90,8 @@
 
 
         <div class="flex items-center justify-between">
-          <button class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline" type="submit">
-            Submit
+          <button class="bg-blue-300 hover:bg-blue-500 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline" type="submit">
+            POST
           </button>
         </div>
         </form>
@@ -98,8 +100,8 @@
         class="grow-0 shrink-1 md:shrink-0 basis-auto xl:w-6/12 lg:w-6/12 md:w-9/12 mb-12 md:mb-0"
       >
         <img
-          src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-login-form/draw2.webp"
-          class="w-full"
+          src="https://images.unsplash.com/photo-1590004953392-5aba2e72269a?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2070&q=80"
+          class="w-full rounded-2xl"
           alt="Sample image"
         />
       </div>
