--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -33,13 +33,13 @@
 </head>
 
 <body>
-      <!-- navbar -->
-      <%- include('partials/_header') %>
+  <!-- navbar -->
+  <%- include('partials/_header_alt') %>
 
-  <section class="h-screen">
+  <section class="h-screen container mx-auto">
     <div class="px-6 h-full text-gray-800">
       <div
-        class="flex xl:justify-between lg:justify-between justify-between items-center flex-wrap h-full g-6"
+        class="flex xl:justify-between lg:justify-between justify-center items-center flex-wrap h-full g-6"
       >
 
         <div class="xl:ml-20 xl:w-5/12 lg:w-5/12 md:w-8/12 mb-12 md:mb-0">
@@ -91,10 +91,10 @@
               placeholder="What would you like to say?"
               name="message"id="customer-message" type="text" placeholder="What would you like to say?"></textarea>
           </div>
-<!-- submit button -->
+          <!-- submit button -->
           <div class="flex items-center justify-between">
-            <button class="bg-red-500 hover:bg-red-800 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline" type="submit">
-              Submit
+            <button class="bg-blue-300 hover:bg-blue-500 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline" type="submit">
+              Send
             </button>
           </div>
       </form>
@@ -104,8 +104,8 @@
     class="grow-0 shrink-1 md:shrink-0 basis-auto xl:w-6/12 lg:w-6/12 md:w-9/12 mb-12 md:mb-0"
   >
     <img
-      src="https://images.unsplash.com/photo-1595475207225-428b62bda831?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=880&q=80"
-      class="w-full rounded-3xl"
+      src="https://images.unsplash.com/photo-1590004845575-cc18b13d1d0a?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2070&q=80"
+      class="w-full rounded-2xl"
       alt="Sample image"
     />
   </div>
