--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -48,7 +48,7 @@
             <div
               class="flex items-center my-4 before:flex-1 before:border-t before:border-gray-300 before:mt-0.5 after:flex-1 after:border-t after:border-gray-300 after:mt-0.5"
             >
-              <p class="text-center font-semibold mx-4 mb-0">CONTACT SELLER</p>
+              <p class="text-center text-lg font-bold mx-4 mb-0">CONTACT SELLER</p>
             </div>
 
             <!-- Customer Name Input -->
