--- a/views/index.ejs
+++ b/views/index.ejs
@@ -143,7 +143,7 @@
       <div class="grid sm:grid-cols-2 md:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 gap-10 pt-12 flex justify-center">
       <% for (let fruit of fruits) { %>
 
-          <div class="product cursor-pointer relative overflow-hidden bg-no-repeat bg-cover max-w-xs" >
+          <div class="product fruit_id-<%= fruit.id %> cursor-pointer relative overflow-hidden bg-no-repeat bg-cover max-w-xs" >
             <% if (!user[0].isadmin) { %>
               <div class="click-to-pop " id="moreInfoBtn" data-bs-toggle="modal" data-bs-target="#exampleModalCenter<%= fruit.id %>">
             <% } else { %>
@@ -234,9 +234,8 @@
                     class="modal-footer flex flex-shrink-0 flex-wrap items-center justify-end p-4 border-t border-gray-200 rounded-b-md">
 
                     <% if (user[0].isadmin) { %>
-
                     <button type="button"
-                      class="removeProductBtn inline-block tracking-wider px-6 py-2.5 bg-dangerRed text-white font-extrabold text-sm leading-tight uppercase rounded shadow-md hover:bg-white hover:text-dangerRed hover:shadow-lg focus:bg-fruitPink focus:shadow-lg focus:outline-none focus:ring-0 active:bg-fruitPink active:shadow-lg transition duration-150 ease-in-out" onclick="removeProduct(<%= fruit.id %>)">
+                      class="removeProductBtn inline-block tracking-wider px-6 py-2.5 bg-dangerRed text-white font-extrabold text-sm leading-tight uppercase rounded shadow-md hover:bg-white hover:text-dangerRed hover:shadow-lg focus:bg-fruitPink focus:shadow-lg focus:outline-none focus:ring-0 active:bg-fruitPink active:shadow-lg transition duration-150 ease-in-out" onclick="removeProduct(<%= fruit.id %>)" data-bs-dismiss="modal">
                       REMOVE
                     </button>
 
