--- a/views/favourites.ejs
+++ b/views/favourites.ejs
@@ -52,8 +52,8 @@
 <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;700&display=swap" rel="stylesheet">
 
 </head>
-<!-- navbar -->
-
+  <!-- navbar -->
+  <%- include('partials/_header_alt') %>
 <body>
   <main>
     <div class="mainContainer">
