--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -34,12 +34,12 @@
 </head>
 
   <body>
-  <%- include('partials/_header') %>
+  <%- include('partials/_header_alt') %>
 
-  <section class="h-screen">
+  <section class="h-screen container mx-auto">
   <div class="px-6 h-full text-gray-800">
     <div
-      class="flex xl:justify-center lg:justify-between justify-center items-center flex-wrap h-full g-6"
+      class="flex xl:justify-between lg:justify-between justify-center items-center flex-wrap h-full g-6"
     >
 
       <div class="xl:ml-20 xl:w-5/12 lg:w-5/12 md:w-8/12 mb-12 md:mb-0">
@@ -49,7 +49,7 @@
           <div
             class="flex items-center my-4 before:flex-1 before:border-t before:border-gray-300 before:mt-0.5 after:flex-1 after:border-t after:border-gray-300 after:mt-0.5"
           >
-            <p class="text-center font-semibold mx-4 mb-0">SIGN UP</p>
+            <p class="text-center text-lg font-bold mx-4 mb-0">SIGN UP</p>
           </div>
 
 
@@ -100,7 +100,7 @@
           <div class="text-center lg:text-left">
             <button
               type="submit"
-              class="inline-block px-7 py-3 bg-blue-600 text-white font-medium text-sm leading-snug uppercase rounded shadow-md hover:bg-blue-700 hover:shadow-lg focus:bg-blue-700 focus:shadow-lg focus:outline-none focus:ring-0 active:bg-blue-800 active:shadow-lg transition duration-150 ease-in-out"
+              class="inline-block px-7 py-3 bg-blue-400 text-white font-medium text-sm font-bold leading-snug uppercase rounded shadow-md hover:bg-blue-600 hover:shadow-lg focus:bg-blue-700 focus:shadow-lg focus:outline-none focus:ring-0 active:bg-blue-800 active:shadow-lg transition duration-150 ease-in-out"
             >
               SIGN UP
             </button>
@@ -108,7 +108,7 @@
               Already have an account?
               <a
                 href="/login"
-                class="text-blue-500 hover:text-blue-700 focus:text-blue-700 transition duration-200 ease-in-out"
+                class="text-blue-400 hover:text-blue-600 hover:underline focus:text-blue-700 transition duration-200 ease-in-out"
                 >LOGIN</a
               >
             </p>
@@ -119,8 +119,8 @@
         class="grow-0 shrink-1 md:shrink-0 basis-auto xl:w-6/12 lg:w-6/12 md:w-9/12 mb-12 md:mb-0"
       >
         <img
-          src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-login-form/draw2.webp"
-          class="w-full"
+          src="https://img.freepik.com/free-photo/assorted-healthy-citrus-fruits-bright-red-background-ripe-peaches-apples-oranges-bananas-grapes-avocado-your-healthy-nutrition-set-nutritious-food-balanced-diet-clean-eating_273609-38009.jpg?w=1380&t=st=1672962556~exp=1672963156~hmac=ff01e05f2b0ec1c4c5a5b9069096a1e3c4b215990015a56f79d3696f61df8662"
+          class="w-full rounded-2xl"
           alt="Sample image"
         />
       </div>
